WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247775
REGRESSION (
256161@main
): [ macOS Debug ] TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessaryMediaFeatureDetection is a consistent failure
https://bugs.webkit.org/show_bug.cgi?id=247775
Summary
REGRESSION (256161@main): [ macOS Debug ] TestWebKitAPI.GPUProcess.OnlyLaunch...
Karl Rackler
Reported
2022-11-10 17:56:32 PST
Description: TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessaryMediaFeatureDetection The first failure I saw on the dashboard was at
256161@main
. This test consistently fails for BigSur, Monterey, and Ventura Debug bots. Reproduction steps: I can reproduce this on
256164@main
but cannot reproduce it on
256158@main
or earlier. Looking at the commits,
https://commits.webkit.org/compare/256158@main...256164@main
,
256161@main
modifies the GPUProcess and appears to be the commit that started the consistent failures. Command: run-api-tests --debug TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessaryMediaFeatureDetection History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessaryMediaFeatureDetection&limit=5000
test result: Failed TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessaryMediaFeatureDetection 2022-11-10 17:33:45.491 com.apple.WebKit.WebContent.Development[37791:1078914] ApplePersistence=NO LEAK: 1 WebProcessPool LEAK: 1 WebPageProxy /Volumes/Data/worker/trunk-monterey-debug-archive/build/OpenSource/Tools/TestWebKitAPI/Tests/WebKitCocoa/GPUProcess.mm:282 Expected equality of these values: [configuration.get().processPool _gpuProcessIdentifier] Which is: 37794 0
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-10 18:01:03 PST
<
rdar://problem/102221029
>
Eric Carlson
Comment 2
2022-11-11 10:09:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6403
EWS
Comment 3
2022-11-11 15:18:54 PST
Committed
256591@main
(ff70798d7add): <
https://commits.webkit.org/256591@main
> Reviewed commits have been landed. Closing PR #6403 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug