Cherry-pick ff70798d7add. rdar://problem/100335624

REGRESSION (256161@main): [ macOS Debug ] TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessaryMediaFeatureDetection is a consistent failure
    https://bugs.webkit.org/show_bug.cgi?id=247775
    rdar://102221029

    Reviewed by Darin Adler and John Wilander.

    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::didCommitLoadForFrame): Use `m_userMediaPermissionRequestManager`
    instead of `userMediaPermissionRequestManager()`` so we don't create the manager, and thus
    the GPU process, if it doesn't already exist.

    Canonical link: https://commits.webkit.org/256591@main

Canonical link: https://commits.webkit.org/252432.814@safari-7614.3.7.3-branch